rust/codec-org/src/snapshots/fragments@strong.org.snap
---
source: rust/codec-org/src/lib.rs
assertion_line: 79
expression: node
input_file: fixtures/fragments/org/strong.org
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        "A ",
        {
          "type": "Strong",
          "content": [
            "strongly"
          ]
        },
        " emphasized word."
      ]
    }
  ]
}
