rust/codec-org/src/snapshots/fragments@subscript.org.snap
---
source: rust/codec-org/src/lib.rs
assertion_line: 79
expression: node
input_file: fixtures/fragments/org/subscript.org
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        "Subscripts like H",
        {
          "type": "Subscript",
          "content": [
            "2"
          ]
        },
        "0."
      ]
    }
  ]
}
