rust/codec-org/src/snapshots/fragments@superscript.org.snap
---
source: rust/codec-org/src/lib.rs
assertion_line: 79
expression: node
input_file: fixtures/fragments/org/superscript.org
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        "Superscripts like CO",
        {
          "type": "Superscript",
          "content": [
            "2"
          ]
        },
        "."
      ]
    }
  ]
}
