rust/codec-org/src/snapshots/fragments@table.org.snap
---
source: rust/codec-org/src/lib.rs
assertion_line: 79
expression: node
input_file: fixtures/fragments/org/table.org
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        "Regular table"
      ]
    },
    {
      "type": "Table",
      "rows": [
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "cellType": "Header",
              "content": [
                "A"
              ]
            },
            {
              "type": "TableCell",
              "cellType": "Header",
              "content": [
                "B"
              ]
            },
            {
              "type": "TableCell",
              "cellType": "Header",
              "content": [
                "C"
              ]
            }
          ],
          "rowType": "Header"
        },
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                "1"
              ]
            },
            {
              "type": "TableCell",
              "content": [
                "2"
              ]
            },
            {
              "type": "TableCell",
              "content": [
                "3"
              ]
            }
          ]
        },
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                "4"
              ]
            },
            {
              "type": "TableCell",
              "content": [
                "5"
              ]
            },
            {
              "type": "TableCell",
              "content": [
                "6"
              ]
            }
          ]
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        "Table with empty cells"
      ]
    },
    {
      "type": "Table",
      "rows": [
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "cellType": "Header",
              "content": [
                "D"
              ]
            },
            {
              "type": "TableCell",
              "cellType": "Header",
              "content": [
                "E"
              ]
            }
          ],
          "rowType": "Header"
        },
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                "1"
              ]
            },
            {
              "type": "TableCell"
            }
          ]
        },
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell"
            },
            {
              "type": "TableCell",
              "content": [
                "2"
              ]
            }
          ]
        }
      ]
    }
  ]
}
